# BotEnvrot

./: .dockerignore  .env.bak  Dockerfile  LICENSE  README.md  botenv.py  docker-compose.yml  pyproject.toml  requirements.txt
cfg/name_you_project/: 1_env
